feat(arch): L3 governance and modularization baseline
- GOV-BOOT-001: GateRuntime no longer exposes JdbcTemplate (DataSource only), WebComponents builds its own JdbcTemplate; ArchitectureTest updated to allow bootstrap/web internal Spring usage and enforce no public Spring exposure (8 tests pass)
- verify-fast: new docs/tools/verify-fast.ps1 (GOV-DEP-001 ArchUnit + GOV-DOC-001/CPLX-001) and docs/tools/verify-governance.ps1 enhanced with exemption expiry check and proposed count validation
- negative fixture: docs/tools/fixtures/expired-exemption-case.md + verify-governance-negative.ps1 demonstrates expired EX detection
- EX-001/002 split plan: docs/architecture/EX-001-002-split-plan.md with delta_lte_zero strategy; skeleton handlers gate-web/*Routes and gate-application/*Handler created without hotspot line growth (ApiRoutes 1538, GateServiceImpl 663 preserved)
- Phase2/3 prep: task-event-outbox-design, metrics-projection-design, sse-cursor-design; new ports TaskEventPort/OutboxPort and V9 draft migration (DRAFT pending L4)
- docs migration: consolidate doc/ -> docs/ per governance; module boundaries aligned with production-architecture §5

L3 scope per production-architecture 17.1; L4 approvals pending for ADR, EX Active, owner changes and production admission